--- a/static/index.html
+++ b/static/index.html
@@ -144,6 +144,7 @@
     <div class="legend" aria-hidden="true">
       <div class="item"><span class="dot red"></span>未承認</div>
       <div class="item"><span class="dot green"></span>承認済み</div>
+      <div class="item" style="margin-left:8px;color:var(--muted);font-size:13px">※青点があなたの現在地（半径3km内のみ表示）</div>
     </div>
   </div>
 
@@ -157,7 +158,7 @@
     let map;
     const markersLayer = L.layerGroup();
 
-    // icons (use google map marker pngs for simplicity)
+    // icons
     const redIcon = new L.Icon({
       iconUrl: 'https://maps.google.com/mapfiles/ms/icons/red-dot.png',
       iconSize: [32,32], iconAnchor: [16,32], popupAnchor: [0,-28]
@@ -166,8 +167,18 @@
       iconUrl: 'https://maps.google.com/mapfiles/ms/icons/green-dot.png',
       iconSize: [32,32], iconAnchor: [16,32], popupAnchor: [0,-28]
     });
+    const blueIcon = new L.Icon({
+      iconUrl: 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png',
+      iconSize: [32,32], iconAnchor: [16,32], popupAnchor: [0,-28]
+    });
 
-    function toast(msg, timeout=2200){
+    // user location tracking
+    let userLatLng = null;
+    let userMarker = null;
+    let userCircle = null;
+    const RADIUS_METERS = 3000; // 3km
+
+    function toast(msg, timeout=2400){
       const el = document.getElementById('toast');
       el.textContent = msg;
       el.style.display = 'block';
@@ -180,28 +191,75 @@
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom:19}).addTo(map);
       markersLayer.addTo(map);
 
-      // try to center on user
+      // try to center on user and set userLatLng; only after success we load markers (so filtering works)
       if(navigator.geolocation){
         navigator.geolocation.getCurrentPosition(pos => {
-          map.setView([pos.coords.latitude, pos.coords.longitude], 16);
-        }, ()=>{});
+          const lat = pos.coords.latitude;
+          const lng = pos.coords.longitude;
+          setUserLocation(lat, lng);
+          map.setView([lat, lng], 15);
+          loadMarkers(); // load after we have user location so filtering applies
+        }, (err)=>{
+          console.warn('geoloc err', err);
+          toast('位置情報を許可してください（半径3km以内の募集のみ表示されます）', 4000);
+          // do not call loadMarkers() — 明示的に位置情報が必要なので表示しない
+        }, {enableHighAccuracy:true, timeout:8000});
+      } else {
+        toast('このブラウザは位置情報に対応していません', 3000);
       }
-
-      loadMarkers();
 
       // refresh markers when map moves (throttle simple)
       let t;
       map.on('moveend', ()=>{ clearTimeout(t); t=setTimeout(loadMarkers,400); });
     }
 
+    function setUserLocation(lat, lng){
+      userLatLng = L.latLng(lat, lng);
+
+      // add/update marker
+      if(userMarker){
+        userMarker.setLatLng(userLatLng);
+      } else {
+        userMarker = L.marker(userLatLng, {icon: blueIcon, zIndexOffset:1000}).addTo(map).bindPopup('現在地');
+      }
+
+      // add/update circle
+      if(userCircle){
+        userCircle.setLatLng(userLatLng);
+      } else {
+        userCircle = L.circle(userLatLng, {
+          radius: RADIUS_METERS,
+          color: 'rgba(37,99,235,0.8)',
+          weight: 1,
+          fillColor: 'rgba(37,99,235,0.08)',
+          fillOpacity: 0.08
+        }).addTo(map);
+      }
+    }
+
     function clearMarkers(){ markersLayer.clearLayers(); }
 
     function loadMarkers(){
+      // require userLatLng to filter; if not present do nothing
+      if(!userLatLng){
+        // safety: do not show anything until location is granted
+        return;
+      }
+
       fetch('/list').then(r=>r.json()).then(data=>{
         clearMarkers();
+        let shown = 0;
         data.forEach((item, index)=>{
+          // if coordinates missing, skip
+          if(typeof item.lat !== 'number' || typeof item.lng !== 'number') return;
+
+          const itemLatLng = L.latLng(item.lat, item.lng);
+          const dist = userLatLng.distanceTo(itemLatLng); // meters
+
+          if(dist > RADIUS_METERS) return; // filter out if outside 3km
+
           const icon = item.approved ? greenIcon : redIcon;
-          const marker = L.marker([item.lat, item.lng], {icon});
+          const marker = L.marker(itemLatLng, {icon});
 
           // popup content (styled card)
           const naiyoEsc = item.naiyo ? escapeHtml(item.naiyo) : '';
@@ -211,10 +269,13 @@
           const t = document.createElement('p'); t.className='popup-title'; t.textContent = item.title || '（タイトルなし）';
           const s = document.createElement('p'); s.className='popup-sub'; s.textContent = `${item.age || '年齢不明'} ・ ${item.gender || '性別不明'}`;
           const d = document.createElement('p'); d.style.marginTop='8px'; d.style.marginBottom='0'; d.textContent = naiyoEsc || '(詳細なし)';
+          const distp = document.createElement('p'); distp.className='popup-sub'; distp.style.marginTop='6px';
+          distp.textContent = `現在地から ${(dist/1000).toFixed(2)} km`;
 
           pop.appendChild(t);
           pop.appendChild(s);
           pop.appendChild(d);
+          pop.appendChild(distp);
 
           const btnWrap = document.createElement('div'); btnWrap.style.marginTop='8px';
 
@@ -237,9 +298,13 @@
 
           marker.bindPopup(pop);
           marker.addTo(markersLayer);
+          shown++;
         });
+
+        toast(`半径3km内の募集を ${shown} 件表示しました`, 1800);
       }).catch(err=>{
         console.error('loadMarkers error', err);
+        toast('募集の取得に失敗しました');
       });
     }
 
@@ -287,5 +352,3 @@
   </script>
 </body>
 </html>
-
-
