--- a/static/index.html
+++ b/static/index.html
@@ -5,10 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>高齢者トラブル解決アプリケーション</title>
 
-  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
   <style>
@@ -16,97 +13,47 @@
       --bg: #f5f7fb;
       --card: #ffffff;
       --muted: #6b7280;
-      --accent: #2563eb; /* blue */
-      --accent-2: #10b981; /* green */
-      --danger: #ef4444; /* red */
+      --accent: #2563eb;
+      --accent-2: #10b981;
+      --danger: #ef4444;
       --radius: 12px;
     }
-
     *{box-sizing: border-box}
     html,body{height:100%;margin:0;font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; background:var(--bg); color:#0f172a}
-
-    /* Header */
-    header.app-header{
-      display:flex;align-items:center;gap:12px;padding:12px 16px;background:linear-gradient(90deg,#ffffff 0%, #eef2ff 100%);box-shadow:0 2px 8px rgba(15,23,42,0.04);position:sticky;top:0;z-index:1000
-    }
-    .brand{
-      display:flex;align-items:center;gap:10px
-    }
-    .logo{
-      width:42px;height:42px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#7c3aed);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:18px
-    }
+    header.app-header{display:flex;align-items:center;gap:12px;padding:12px 16px;background:linear-gradient(90deg,#ffffff 0%, #eef2ff 100%);box-shadow:0 2px 8px rgba(15,23,42,0.04);position:sticky;top:0;z-index:1000}
+    .brand{display:flex;align-items:center;gap:10px}
+    .logo{width:42px;height:42px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#7c3aed);display:flex;align-items:center;justify-content:center;color:white;font-weight:700;font-size:18px}
     .title{font-weight:700;font-size:16px}
     .subtitle{font-size:12px;color:var(--muted)}
-
-    /* Layout */
     #map{height:56vh;width:100%;border-bottom:1px solid rgba(15,23,42,0.04)}
-
-    .controls{
-      max-width:980px;margin:14px auto;padding:0 14px
-    }
-
-    .form-card{
-      background:var(--card);border-radius:var(--radius);padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);display:grid;grid-template-columns:repeat(2,1fr);gap:12px;align-items:end
-    }
+    .controls{max-width:980px;margin:14px auto;padding:0 14px}
+    .form-card{background:var(--card);border-radius:var(--radius);padding:14px;box-shadow:0 8px 20px rgba(2,6,23,0.06);display:grid;grid-template-columns:repeat(2,1fr);gap:12px;align-items:end}
     .form-row{display:flex;flex-direction:column;gap:6px}
     label{font-size:12px;color:var(--muted)}
     select,input{height:40px;padding:8px;border-radius:8px;border:1px solid #e6e9ef;font-size:15px}
     input::placeholder{color:#9aa4b2}
-
     .full{grid-column:1/-1}
-
     .submit-btn{background:var(--accent-2);border:none;color:white;padding:10px;border-radius:10px;font-weight:600;cursor:pointer;height:44px}
     .submit-btn:active{transform:translateY(1px)}
-
-    /* Legend */
     .legend{display:flex;gap:8px;align-items:center;margin-top:10px}
     .legend .item{display:flex;align-items:center;gap:8px;font-size:13px;color:var(--muted)}
     .dot{width:12px;height:12px;border-radius:50%}
     .dot.red{background:#ef4444}
     .dot.green{background:#10b981}
-
-    /* popup button style override */
     .leaflet-popup-content-wrapper{border-radius:10px}
     .popup-content{min-width:220px}
     .popup-row{display:flex;gap:8px;align-items:center;margin-bottom:6px}
     .popup-title{font-weight:700;font-size:15px;margin:0}
     .popup-sub{font-size:13px;color:var(--muted);margin:0}
-
     .popup-btn{display:block;width:100%;padding:8px;border-radius:8px;border:none;font-weight:600;cursor:pointer;margin-top:8px}
     .btn-approve{background:#f59e0b;color:white}
     .btn-complete{background:#10b981;color:white}
     .btn-danger{background:#ef4444;color:white}
-
-    /* toast */
     .toast{position:fixed;left:50%;transform:translateX(-50%);bottom:22px;background:rgba(15,23,42,0.9);color:white;padding:10px 14px;border-radius:8px;z-index:2000;display:none}
-
-    /* User location toggle (floating) */
-    .user-toggle{
-      position:fixed;
-      top:12px;
-      right:12px;
-      z-index:1200;
-      background:var(--card);
-      border-radius:10px;
-      box-shadow:0 6px 18px rgba(2,6,23,0.08);
-      padding:8px 10px;
-      display:flex;
-      gap:8px;
-      align-items:center;
-      border:1px solid #e6e9ef;
-      font-weight:600;
-      cursor:pointer;
-      user-select:none;
-    }
-    .user-toggle.active{
-      background:linear-gradient(90deg,var(--accent),#7c3aed);
-      color:white;
-      border-color:transparent;
-    }
+    .user-toggle{position:fixed;top:12px;right:12px;z-index:1200;background:var(--card);border-radius:10px;box-shadow:0 6px 18px rgba(2,6,23,0.08);padding:8px 10px;display:flex;gap:8px;align-items:center;border:1px solid #e6e9ef;font-weight:600;cursor:pointer;user-select:none}
+    .user-toggle.active{background:linear-gradient(90deg,var(--accent),#7c3aed);color:white;border-color:transparent}
     .user-toggle small{display:block;font-size:11px;color:var(--muted)}
     .user-toggle.active small{color:rgba(255,255,255,0.9)}
-
-    /* responsive */
     @media(max-width:720px){
       .form-card{grid-template-columns:1fr}
       .title{font-size:15px}
@@ -121,7 +68,6 @@
 
   <div id="map" aria-label="地図"></div>
 
-  <!-- User location toggle -->
   <button id="userToggle" class="user-toggle" aria-pressed="false" title="自分の現在地を表示/非表示">
     <span id="userToggleLabel">自分の位置を表示</span>
     <small id="userToggleSub">オフ</small>
@@ -182,16 +128,13 @@
 
   <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
-  <!-- Leaflet JS (no defer) -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
   <script>
-    // map & layers
     let map;
     const markersLayer = L.layerGroup();
-    const userLayer = L.layerGroup(); // 自分の位置用レイヤー（マーカーの追加/削除を簡単に）
+    const userLayer = L.layerGroup();
 
-    // icons (use google map marker pngs for simplicity)
     const redIcon = new L.Icon({
       iconUrl: 'https://maps.google.com/mapfiles/ms/icons/red-dot.png',
       iconSize: [32,32], iconAnchor: [16,32], popupAnchor: [0,-28]
@@ -201,7 +144,6 @@
       iconSize: [32,32], iconAnchor: [16,32], popupAnchor: [0,-28]
     });
 
-    // user marker state
     let userMarker = null;
     let userWatchId = null;
     let userShown = false;
@@ -218,16 +160,10 @@
       map = L.map('map', {zoomControl:true, attributionControl:false}).setView([35.7,139.49], 15);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom:19}).addTo(map);
       markersLayer.addTo(map);
-      userLayer.addTo(map); // userLayerは後で上に表示される
-
-      // try to center on user once (non-forcing) - this will be performed when user requests their location
+      userLayer.addTo(map);
       loadMarkers();
-
-      // refresh markers when map moves (throttle simple)
       let t;
       map.on('moveend', ()=>{ clearTimeout(t); t=setTimeout(loadMarkers,400); });
-
-      // user toggle button binding
       const userToggle = document.getElementById('userToggle');
       userToggle.addEventListener('click', toggleUserLocation);
     }
@@ -240,22 +176,16 @@
         data.forEach((item, index)=>{
           const icon = item.approved ? greenIcon : redIcon;
           const marker = L.marker([item.lat, item.lng], {icon});
-
-          // popup content (styled card)
           const naiyoEsc = item.naiyo ? escapeHtml(item.naiyo) : '';
           const pop = document.createElement('div');
           pop.className = 'popup-content';
-
           const t = document.createElement('p'); t.className='popup-title'; t.textContent = item.title || '（タイトルなし）';
           const s = document.createElement('p'); s.className='popup-sub'; s.textContent = `${item.age || '年齢不明'} ・ ${item.gender || '性別不明'}`;
           const d = document.createElement('p'); d.style.marginTop='8px'; d.style.marginBottom='0'; d.textContent = naiyoEsc || '(詳細なし)';
-
           pop.appendChild(t);
           pop.appendChild(s);
           pop.appendChild(d);
-
           const btnWrap = document.createElement('div'); btnWrap.style.marginTop='8px';
-
           if(!item.approved){
             const btn = document.createElement('button'); btn.className='popup-btn btn-approve'; btn.textContent='承認する';
             btn.onclick = ()=>{ approve(index); };
@@ -264,15 +194,10 @@
             const btn = document.createElement('button'); btn.className='popup-btn btn-complete'; btn.textContent='完了';
             btn.onclick = ()=>{ if(confirm('この募集を完了して削除しますか？')) complete(index); };
             btnWrap.appendChild(btn);
-
             const del = document.createElement('button'); del.className='popup-btn btn-danger'; del.textContent='通報/削除'; del.style.marginTop='6px';
             del.onclick = ()=>{ if(confirm('本当に削除しますか？')) complete(index); };
-            // optional: only admin can see 'del' in future
-            // btnWrap.appendChild(del);
           }
-
           pop.appendChild(btnWrap);
-
           marker.bindPopup(pop);
           marker.addTo(markersLayer);
         });
@@ -283,17 +208,26 @@
 
     function escapeHtml(s){ if(!s) return ''; return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;'); }
 
+    // ---------- 修正ポイント：buttonClick() ----------
     function buttonClick(){
-      // gather
       const old = document.getElementById('old').value;
       const gender = document.getElementById('gender').value;
       const title = document.getElementById('title').value;
       const naiyo = document.getElementById('naiyo').value;
 
-      // simple validation
       if(!title){ toast('タイトルを選んでください'); return; }
 
-      // get geolocation and post
+      // もし「自分の位置表示がON」かつ userMarker が存在するなら、それを使う（余分な getCurrentPosition を呼ばない）
+      if(userShown && userMarker){
+        const latlng = userMarker.getLatLng();
+        const payload = { lat: latlng.lat, lng: latlng.lng, age: old, gender: gender, title: title, naiyo: naiyo };
+        fetch('/add', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload)})
+          .then(r=>r.json()).then(()=>{ toast('募集を投稿しました'); loadMarkers(); })
+          .catch(()=>toast('投稿に失敗しました'));
+        return;
+      }
+
+      // それ以外は通常通り getCurrentPosition で位置を取得する
       if(navigator.geolocation){
         navigator.geolocation.getCurrentPosition(pos=>{
           const payload = { lat: pos.coords.latitude, lng: pos.coords.longitude, age: old, gender: gender, title: title, naiyo: naiyo };
@@ -307,6 +241,7 @@
         toast('このブラウザは位置情報に対応していません');
       }
     }
+    // ---------- 修正ここまで ----------
 
     function approve(index){
       fetch('/approve', {method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify({index})})
@@ -320,7 +255,6 @@
         .catch(()=>toast('削除に失敗しました'));
     }
 
-    // --- ユーザーの現在地表示機能 ---
     function updateToggleUI(shown){
       const btn = document.getElementById('userToggle');
       const lbl = document.getElementById('userToggleLabel');
@@ -352,12 +286,10 @@
         return;
       }
 
-      // まず現在地を一回取得して中心を合わせる
       navigator.geolocation.getCurrentPosition(pos => {
         const lat = pos.coords.latitude;
         const lng = pos.coords.longitude;
 
-        // create marker if needed
         if(!userMarker){
           userMarker = L.circleMarker([lat, lng], {
             radius: 8,
@@ -372,10 +304,8 @@
           userMarker.setLatLng([lat,lng]);
         }
 
-        // center map to user's position (only on initial show)
         map.setView([lat, lng], Math.max(map.getZoom(), 15));
 
-        // start watching for updates (so marker follows when moving)
         if(userWatchId === null){
           userWatchId = navigator.geolocation.watchPosition(p => {
             const la = p.coords.latitude;
@@ -396,12 +326,10 @@
     }
 
     function hideUserLocation(){
-      // stop watching
       if(userWatchId !== null){
         navigator.geolocation.clearWatch(userWatchId);
         userWatchId = null;
       }
-      // remove marker(s)
       userLayer.clearLayers();
       userMarker = null;
       userShown = false;
@@ -409,12 +337,11 @@
       toast('自分の位置を非表示にしました');
     }
 
-    // init on load（最初から自分の位置を表示）
-window.addEventListener('load', () => {
-  initMap();
-  showUserLocation(); // ← これを追加
-});
+    // 初期表示をONにする場合は次の行を有効化（既にONが要る場合）
+    // window.addEventListener('load', () => { initMap(); showUserLocation(); });
+
+    // 通常：初期はOFFで読み込み
+    window.addEventListener('load', initMap);
   </script>
 </body>
 </html>
-
